# uWFG-Pico

./: CMakeLists.txt  README.md  gen.c  gen.h  hmi.c  hmi.h  lcd-SH1106.c  lcd.c  lcd.h  lcdfont.c  lcdlogo.c  monitor.c  monitor.h  uWFG.c  uWFG.h  waveform.c  wfgout.c  wfgout.pio
